# fancy-ffmpeg

./: Cargo.toml  README.md
src/: ffprobe.rs  lib.rs
