[package]
name = "fancy-ffmpeg"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Fancy wrapper to ffmpeg cli"
readme = "README.md"
documentation = "https://docs.rs/fancy-ffmpeg"
repository = "https://github.com/comfycast/fancy-ffmpeg"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.1"

[dev-dependencies]
anyhow = "1.0.93"
