[package]
name = "fancy-ffmpeg"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
description = "Fancy wrapper to ffmpeg cli"
readme = "README.md"
documentation = "https://docs.rs/fancy-ffmpeg"
repository = "https://github.com/comfycast/fancy-ffmpeg"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", optional = true, features = ["process"] }

[dev-dependencies]
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["full"] }

[features]
tokio = ["dep:tokio"]
